--- a/src/main/resources/templates/integrity_result.html
+++ b/src/main/resources/templates/integrity_result.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #3d4444">
 
-<iframe src="/cwzz/integrity_result_title" style="width: 98%;border: none" id="title"></iframe>
+<!--<iframe src="/cwzz/integrity_result_title" style="width: 98%;border: none" id="title"></iframe>-->
 
 <div id="integrity_photos" class="hsldr-container">
 </div>
