--- a/src/main/resources/templates/IntroducePage.html
+++ b/src/main/resources/templates/IntroducePage.html
@@ -118,7 +118,7 @@
         </div>
     </section>
 
-    <nav class="cd-vertical-nav">
+    <nav class="cd-vertical-nav" style="display: none">
         <ul class="nnav">
             <li><a href="/cwzz/login" class="smooth"><span class="label" style="color: #6b6b6b;">项目大厅</span></a></li>
             <li><a href="/cwzz/login" class="smooth"><span class="label" style="color: #6b6b6b;">发布项目</span></a></li>
