--- a/src/main/resources/templates/SearchPage.html
+++ b/src/main/resources/templates/SearchPage.html
@@ -150,7 +150,7 @@
                             <ul class="dropdown-menu extended logout">
                                 <div class="log-arrow-up"></div>
                                 <li class="eborder-top">
-                                    <a href="#"><i class="fas fa-home"></i> 个人中心</a>
+                                    <a href="/cwzz/personal_center"><i class="fas fa-home"></i> 个人中心</a>
                                 </li>
                                 <li>
                                     <a onclick="logout()"><i class="fas fa-sign-out-alt"></i> 登出</a>
@@ -270,7 +270,7 @@
                         </div>
                         <div class="rightcontent flex1">
                             <a href="#" value="" id="state1" class="abackimg" onclick="search_state('All')">全部</a>
-                            <a href="#" value="h1" id="state2" onclick="search_state('BidTime')">招标中</a>
+                            <a href="#" value="h1" id="state2" style="display: none" onclick="search_state('BidTime')">招标中</a>
                             <a href="#" value="h2" id="state3" onclick="search_state('Underway')">进行中</a>
                             <a href="#" value="h3" id="state4" onclick="search_state('Finished')">已完成</a>
                         </div>
